<resources>
    <string name="AC">石绵</string>
    <string name="BR">砖</string>
    <string name="CC">混凝土制方形渠道</string>
    <string name="CI">生铁</string>
    <string name="CO">混凝土</string>
    <string name="CSB">混凝土制分阶段(有销钉)</string>
    <string name="CSU">混凝土制分阶段(无销钉)</string>
    <string name="DI">球墨铸铁</string>
    <string name="GRC">玻璃纤维增强混凝土</string>
    <string name="GRP">玻璃纤维增强塑胶</string>
    <string name="MAC">特定石头</string>
    <string name="MAR">石头，没特定</string>
    <string name="PE">聚乙烯</string>
    <string name="PF">沥青纤维</string>
    <string name="PP">聚丙烯</string>
    <string name="PSC">塑胶/刚复合材料</string>
    <string name="PVC">聚氯乙烯</string>
    <string name="Qiangguangyizhi">强光抑制：</string>
    <string name="RPM">强化塑胶复合材料</string>
    <string name="SI">离心精炼铁</string>
    <string name="ST">钢</string>
    <string name="U">不清楚</string>
    <string name="VC">瓦</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">添加</string>
    <string name="addBiaojiFalse">添加标记失败！</string>
    <string name="addKanbanToRecord">添加看板录制</string>
    <string name="add_TextToImg_title">请输入需要叠加的文字：</string>
    <string name="add_new_kanban">录制新的看板</string>
    <string name="add_textToImg">文字叠加</string>
    <string name="addingKanbanToRecord">正在添加看板...</string>
    <string name="advanceSetting">高级设置</string>
    <string name="airPressure">气压</string>
    <string name="alarm">警告</string>
    <string name="alkathene">高压聚乙烯</string>
    <string name="alreadyConnect">已连接</string>
    <string name="alreadyPause">已暂停</string>
    <string name="angle">0°</string>
    <string name="app_name">Peek2S</string>
    <string name="app_name_neutral">Quick View</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asbestosCementPipe">石棉水泥管</string>
    <string name="backVideo">回放</string>
    <string name="baseSetting">基本设置</string>
    <string name="basic_setting">系统设置</string>
    <string name="battery">主机电量</string>
    <string name="battery_system">终端电量</string>
    <string name="biaoji">标记</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cameraSetting">摄像机参数设置</string>
    <string name="canMove">，且不支持移动！</string>
    <string name="cancel">取消</string>
    <string name="cancelRecord">取消录像</string>
    <string name="capture">抓拍</string>
    <string name="captureFall">截图失败！</string>
    <string name="capture_guandao_id">管道号</string>
    <string name="capture_guandao_id_e">管道号：</string>
    <string name="capture_guandao_xuhao">序号</string>
    <string name="capture_quexian_clock">时钟表示</string>
    <string name="capture_quexian_clock_e">时钟表示:</string>
    <string name="capture_quexian_detail_e">描述：</string>
    <string name="capture_quexian_distance">距离(m)</string>
    <string name="capture_quexian_distance_e">距离(m):</string>
    <string name="capture_quexian_grade">等级</string>
    <string name="capture_quexian_grade_e">等级:</string>
    <string name="capture_quexian_length">长度(m)</string>
    <string name="capture_quexian_length_e">长度(m):</string>
    <string name="capture_quexian_list">缺陷列表：</string>
    <string name="capture_quexian_name">缺陷名</string>
    <string name="capture_quexian_name_e">缺陷名:</string>
    <string name="capture_quexian_style">类型</string>
    <string name="capture_quexian_style_e">类型:</string>
    <string name="castIronPipe">铸铁管</string>
    <string name="celiang">测距</string>
    <string name="change">修改</string>
    <string name="changeEmptyData">修改数据为空！</string>
    <string name="changingManufacturerName">正在修改生产商名称！</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkUpdateInfo">正在检查更新信息！</string>
    <string name="checkingInternet">正在检查网络 . . .</string>
    <string name="chooseQuexianSort">请选择缺陷类型！</string>
    <string name="choose_copy_path">请选择拷贝路径</string>
    <string name="choose_file">请先选择要操作的文件！</string>
    <string name="chuWu">除雾</string>
    <string name="clayPipe">陶土管</string>
    <string name="clear">清空</string>
    <string name="clear_history">清空记录</string>
    <string name="clickAgainToExit">再按一次返回键退出预览！</string>
    <string name="clockDescribeExample">时钟描述示例：</string>
    <string name="close">关</string>
    <string name="company">深圳市博铭维智能科技有限公司</string>
    <string name="company_title">制造商:</string>
    <string name="concretePipe">混凝土管</string>
    <string name="connect">连接成功</string>
    <string name="connectAuto">自动连接WIFI</string>
    <string name="connectFallCheckWifi">连接失败！请检查wifi是否连接！</string>
    <string name="continueRecord">继续录像</string>
    <string name="controlZhuji">控制主机：</string>
    <string name="copyFileSuccess">复制完成！</string>
    <string name="copyRemindFirst">正在复制第</string>
    <string name="copyremindSecond">个文件！</string>
    <string name="currentStorageRemind">警告，当前剩余存储空间为</string>
    <string name="currentValue">当前值</string>
    <string name="current_jixin_time">主机时间：</string>
    <string name="custom">自定义</string>
    <string name="customModel">自定义模式</string>
    <string name="dataHasChange">数据已更改！</string>
    <string name="dataNoSave">数据未保存！</string>
    <string name="delete">删除</string>
    <string name="deleteAll">删除所有</string>
    <string name="digtitalMaxSet">数字变倍</string>
    <string name="disconnect">连接断开</string>
    <string name="distance_e">距离:</string>
    <string name="doubleWallCorrugatedPipe">双壁波纹管</string>
    <string name="downloading">正在下载</string>
    <string name="edit">编辑</string>
    <string name="endOption">结束项</string>
    <string name="environmentCount">环境统计</string>
    <string name="error_pass">密码错误！</string>
    <string name="example">示例</string>
    <string name="exitAppSure">确认退出程序？</string>
    <string name="exitingApp">正在退出程序</string>
    <string name="fileDeleteAfterAppDelete">2.软件卸载后，文件将被自动删除！</string>
    <string name="fileNoFound">文件不存在！</string>
    <string name="fileSaveDangerousIn4">受谷歌政策影响，4.4系统在使用二级存储卡时存在一定风险：</string>
    <string name="fileSaveTo">1.文件存储位置固定为：</string>
    <string name="file_all_choose">全选</string>
    <string name="file_copy">拷贝</string>
    <string name="firstConnectState">未连接</string>
    <string name="flawDescribe">缺陷描述：</string>
    <string name="flowDown">顺流(SL)</string>
    <string name="focus">聚焦</string>
    <string name="functionalityflaw">功能性缺陷</string>
    <string name="gaoganguang">高感光：</string>
    <string name="geoinverseCode">地理逆编码</string>
    <string name="glassSteelTube">玻璃钢管</string>
    <string name="goBack">返回</string>
    <string name="guandaohaowei">管道号:${guandaohao},</string>
    <string name="hardwareSetting">硬解码优先</string>
    <string name="headDataIsEmpty">版头信息为空！</string>
    <string name="highBeam">远光灯</string>
    <string name="inStorage">本机存储</string>
    <string name="info_is_empty">请先填入数据！</string>
    <string name="isAbandonAddHead">是否放弃添加版头？</string>
    <string name="isAddKanbanToRecord">请选择是否添加看板录制</string>
    <string name="isAddRecordHead">是否添加版头？</string>
    <string name="isAddToList">是否添加至列表选项？</string>
    <string name="isCheckingInternet">正在检查网络</string>
    <string name="isDeleteAllFile">是否删除所有选择文件？</string>
    <string name="isDeleteItem">是否删除该选项？</string>
    <string name="isEditPicture">是否编辑图片？</string>
    <string name="isExitApp">是否退出程序？</string>
    <string name="isUpdateApp">是否更新程序？</string>
    <string name="isUpdateToList">是否在列表选项中更新？</string>
    <string name="isUpdateVersion">是否升级至版本</string>
    <string name="isdelete">是否删除？</string>
    <string name="isdeleteChooseFile">是否删除已选文件？</string>
    <string name="isdeleteFile">是否删除文件：</string>
    <string name="jiXin_time">时间设置</string>
    <string name="jixin_time_set">主机时间显示</string>
    <string name="kanbanFileBreak">看板文件损坏！请删除后重新录制！</string>
    <string name="kanbanListIsEmpty">看板列表为空，请先录制新的看板</string>
    <string name="kanbanTitle">看板选择</string>
    <string name="kanban_shangxian">看板数量已满</string>
    <string name="kuandongtai">宽动态：</string>
    <string name="language_default">默认</string>
    <string name="language_en">English</string>
    <string name="language_set">语言设置</string>
    <string name="language_zh">中文</string>
    <string name="lastOption">上一页</string>
    <string name="lightSetting">亮度设置</string>
    <string name="link">连接</string>
    <string name="localSave">机身存储</string>
    <string name="locate">定位</string>
    <string name="location_e">经纬度:</string>
    <string name="location_false">定位失败，请稍后重试!</string>
    <string name="logoChoose">生产商logo选择：</string>
    <string name="lowBattery">低电量</string>
    <string name="lowBeam">近光灯</string>
    <string name="lowStorageAlarm">存储警告！剩余存储空间过低！</string>
    <string name="mainFrame">主机:</string>
    <string name="mainFrameConnect">主机连接</string>
    <string name="mainFrameNoConnect">主机未连接！</string>
    <string name="nextOption">下一页</string>
    <string name="pic_in_video_detail">缺陷详细信息</string>
    <string name="picture">图片</string>
    <string name="record">录像</string>
    <string name="record_miaoshu">抓拍-缺陷描述</string>
    <string name="record_task_computer">检测单位</string>
    <string name="record_task_diameter">管径</string>
    <string name="record_task_direction">检测方向</string>
    <string name="record_task_end">结束井号</string>
    <string name="record_task_guancai">管材</string>
    <string name="record_task_id">任务编号</string>
    <string name="record_task_name">任务名称</string>
    <string name="record_task_people">检测员</string>
    <string name="record_task_place">检测地点</string>
    <string name="record_task_sort">管道类型</string>
    <string name="record_task_start">起始井号</string>
    <string name="setting">配置</string>
    <string name="startOption">起始项</string>
    <string name="startRecord">开始录像</string>
</resources>