<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/title"
        style="@style/textSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/language_set" />

    <View
        android:id="@+id/fengexianl"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="5dp"
        android:background="@color/colorview" />

    <RadioGroup
        android:id="@+id/radio_groud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fengexianl"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_default"
            android:textColor="@color/colorBase" />

        <RadioButton
            android:id="@+id/rbtn_zh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_zh"
            android:textColor="@color/colorBase" />

        <RadioButton
            android:id="@+id/rbtn_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_en"
            android:textColor="@color/colorBase" />
    </RadioGroup>
</RelativeLayout>
