<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_QuexianDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/pic_in_video_detail"
        android:textColor="@color/colorText"
        android:textSize="@dimen/video_player_textsize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom_quexian_menu"
        android:layout_below="@+id/tv_title_QuexianDetail"
        android:padding="5dp">

        <uk.co.senab.photoview.PhotoView
            android:id="@+id/img_quexianPicInVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_cancle_inVisible"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:background="@drawable/img_btn_bg"
        android:clickable="true"
        android:padding="5dp"
        android:src="@mipmap/close_x_yellow" />

    <LinearLayout
        android:id="@+id/ll_bottom_quexian_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_quexian_show_invideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:textColor="@color/colorBase"
            android:textSize="@dimen/pic_show_list" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_container_quexianShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/activity_pic_show_list"
                    android:gravity="left"
                    android:text="@string/capture_guandao_xuhao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/activity_pic_show_list"
                    android:gravity="left"
                    android:text="@string/capture_quexian_style" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/activity_pic_show_list"
                    android:gravity="left"
                    android:text="@string/capture_quexian_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/activity_pic_show_list"
                    android:gravity="left"
                    android:text="@string/capture_quexian_grade" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/activity_pic_show_list"
                    android:gravity="left"
                    android:text="@string/capture_quexian_distance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/activity_pic_show_list"
                    android:gravity="left"
                    android:text="@string/capture_quexian_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/activity_pic_show_list"
                    android:gravity="left"
                    android:text="@string/capture_quexian_length" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recy_picQuexianShowInVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
